fix to some code
- md 변경
- .run 폴더 gitignore 추가
- sse 서비스 쪽 코드 추가
- prefix 설정 추가

--- a/sse/src/main/resources/application.yml
+++ b/sse/src/main/resources/application.yml
@@ -12,3 +12,6 @@ armeria:
     - port: 20007    # Port 8080 will serve only HTTP.
       protocols:
         - http
+spring:
+  webflux:
+    base-path: /stem
